# rust-xades

./: Cargo.toml  README.md
pkcs11/: Cargo.toml
pkcs11/src/: lib.rs
src/: error.rs  lib.rs  ns.rs  xml.rs
src/crypto/: mod.rs  software.rs
src/sig/: lt.rs  mod.rs  sign.rs  template.rs
src/validate/: dsig.rs  ltv.rs  mod.rs  xades.rs
tests/: interop.rs  sign_b.rs  validate_b.rs
tests/fixtures/: test_roots.pem  xades-lt.asice
